# FamilyAiButler

./: .dockerignore  .gitignore  README.md
backend/: .dockerignore  .gitignore  README.md  code_style.md  pom.xml
backend/family-ai/: memory.md  pom.xml
backend/family-cache-spring-boot-starter/: pom.xml
backend/family-common/: pom.xml
backend/family-core/: README.md  pom.xml
backend/family-framework/: plan.md  pom.xml
backend/family-gateway/: README.md  pom.xml
backend/family-uaa/: plan.md  pom.xml  readme.md
backend/openapi-debug-console-spring-boot-starter/: ANNOTATION.md  OPENAPI_ANNOTATION_REDESIGN_PLAN.md  OPENAPI_DOC_MIGRATION_PLAN.md  OPENAPI_SECURITY_TEST_REPORT.md  README.md  annotation-plan.md  pom.xml
backend/pg-ddd-codegen/: README.md  codeGen.md  pom.xml
docs/api/: openapi-summary.md
docs/product/: business-analysis.md
docs/ui/: multi-platform-ui-design.md
frontend/: package.json  pnpm-lock.yaml
frontend/apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri-env.d.ts  tauri.conf.json
frontend/apps/desktop/src-tauri/src/: lib.rs  main.rs
frontend/scripts/: build-web-if-needed.mjs  generate-tauri-icon.mjs  normalize-tauri-icon.mjs
ops/: README.md
ops/docker-compose/: .env.example  Dockerfile.backend  Dockerfile.frontend  docker-compose.yml  nginx.frontend.conf.template
ops/nginx/: family-ai-butler.local.conf  nginx.local.conf
ops/scripts/: backend-local.sh  build-backend.sh  build-images.sh  desktop-tauri-build.sh  desktop-tauri-dev.sh  docker-compose-up.sh  frontend-nginx-up.sh  frontend-preview-server.mjs  k8s-apply.sh  (+1 more)
(+773 files in other folders)
