[package]
name = "family-ai-butler-desktop"
version = "0.0.1"
description = "FamilyAiButler desktop shell."
authors = ["egon"]
edition = "2021"

[lib]
name = "family_ai_butler_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
